# open-earth-data-kit

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING_EN.md  LICENSE  README.md  README_EN.md  environment.yml  pyproject.toml
catalog/: sources.json
meteo_download/: cli.py  state.py
meteo_download/adapters/: __init__.py  base.py  http_index.py  icechunk_zarr.py  manual_auth.py  opendap_xarray.py  s3_xml.py
oedk/: __init__.py  __main__.py  backends.py  catalog.py  cli.py  geo.py  models.py  state.py
oedk/adapters/: base.py  http_index.py  icechunk_zarr.py  manual_auth.py  opendap_xarray.py  s3_xml.py
sources/: download_from_opendap.py  era5_planette_downloader.py  ifs_oper_download.py  s3_downloader_multi.py
tests/: test_adapters.py  test_backends.py  test_catalog.py  test_cli.py  test_state.py
